PR lib/52547 - read_history (readline.c) should now sets history_length.

Patch from Yen Chi Hsuan in the PR, extracted from Apple's version of
readline.c, then modified by me to be consistent about what the return
value really is.